# bundestag-analysis

./: .gitignore  CLAUDE.md  Dockerfile.api  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/bundestag_mcp/: __init__.py  client.py
src/noun_analysis/: __init__.py  analyzer.py  categorizer.py  factions.py  gemini_service.py  government.py  parser.py  parser_evaluation.py  patterns.py  speech_aggregation.py  text_utils.py  wrapped.py
src/noun_analysis/api/: __init__.py  main.py  routes.py  schemas.py
src/noun_analysis/classification/: __init__.py  context.py  qa_session.py  speech_start.py
src/noun_analysis/cli/: __init__.py  constants.py  display.py  export.py
src/noun_analysis/cli/commands/: analyze.py  download.py  evaluate.py  wrapped.py
src/noun_analysis/lexicons/: __init__.py  adjectives.py  categories.py  extended.py  lookups.py  multi_label.py  topics.py  verbs.py
src/noun_analysis/wrapped/: __init__.py  export.py  gender.py  party_profiles.py  queries.py  renderer.py  speaker_analysis.py  tone.py  types.py  wrapped_loader.py
src/noun_analysis/wrapped/speaker_export/: __init__.py  constants.py  exporter.py  quiz.py  rankings.py  signatures.py  spirit_animals.py  utils.py
tests/: __init__.py  test_kanzler_parsing.py
